Home page alignment fixed

--- a/src/modules/Home/Shop/style.module.css
+++ b/src/modules/Home/Shop/style.module.css
@@ -1,4 +1,7 @@
-.shopContent h1 {
+.shopContent {
+    margin: auto;
+}
+    .shopContent h1 {
     font-size: 50px;
     margin-bottom: 45px;
     text-align: center;
@@ -11,6 +14,7 @@
     display: flex;
     flex-flow: row;
     flex-wrap: wrap;
+    justify-content: center;
     width: fit-content;
     margin: 0 100px;
 }
